--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -194,8 +194,8 @@
    "source": [
     "pd.options.display.max_rows = 15\n",
     "pd.options.display.float_format = '{:,.2f}'.format\n",
-    "train = pd.read_csv(\"C:/Users/narendrakumar.h/Documents/train.csv\")\n",
-    "test = pd.read_csv(\"C:/Users/narendrakumar.h/Documents/test.csv\")\n",
+    "train = pd.read_csv(\"./train.csv\")\n",
+    "test = pd.read_csv(\"./test.csv\")\n",
     "train.head()"
    ]
   },
